convert模块,初步实现mjpeg2rgb

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,9 @@
         "setjmp.h": "c",
         "array": "cpp",
         "string": "cpp",
-        "string_view": "cpp"
+        "string_view": "cpp",
+        "typeinfo": "cpp",
+        "qapplication": "cpp"
     },
     "search.exclude": {
         "**/*.o": true,
